FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Platform_IDs__c.field-meta.xml
<CustomField>
    <fullName>Platform_IDs__c</fullName>
    <description>Twinned from Subscription on amend and renew</description>
    <inlineHelpText>On amendment and renewal, the existing Platform Id(s) for this Quote Line</inlineHelpText>
    <label>Platform IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>