FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Previous_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Previous_Payment_Method__c</fullName>
    <description>Used in QCP to store previous payment method selection.</description>
    <inlineHelpText>Used in QCP to store previous payment method selection.</inlineHelpText>
    <label>Previous Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Method</valueSetName>
    </valueSet>
</CustomField>