FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Price_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product is part of price change</description>
    <inlineHelpText>Product is part of price change</inlineHelpText>
    <label>Price Change</label>
    <type>Checkbox</type>
</CustomField>