FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Rules_Fired__c.field-meta.xml
<CustomField>
    <fullName>Price_Rules_Fired__c</fullName>
    <description>API is referenced in both CPQ Components as well as custom Apex.</description>
    <inlineHelpText>Depicts a list of Price Rules and their accompanying identifiable data for trouble shooting purposes. Populates during Salesforce CPQ.</inlineHelpText>
    <label>Price Rules Fired</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>