FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Processed_Volume_Amount__c.field-meta.xml
<CustomField>
    <fullName>Processed_Volume_Amount__c</fullName>
    <description>This field is used to calculate the ARR for Merchant Processing healthcare product (FWHC1300)</description>
    <label>Processed Volume Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>