FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/QL_count_usage_field_values__c.field-meta.xml
<CustomField>
    <fullName>QL_count_usage_field_values__c</fullName>
    <description>Created for ticket SALDEV-677. This checks if the usage QL has one of the rates filled out</description>
    <formula>AND(
ISPICKVAL( Rate_Type__c , &quot;Usage&quot;),
ISNULL(Adjusted_Rate_Percent__c),
ISNULL(Adjusted_Rate_Amount__c),
ISNULL(Usage_Rate__c),
ISNULL(Usage_Rate_Amt__c),
Tiered_Pricing__c = false
)</formula>
    <label>QL count usage field values</label>
    <type>Checkbox</type>
</CustomField>