FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/QL_Drawer_Refresh_Trigger__c.field-meta.xml
<CustomField>
    <fullName>QL_Drawer_Refresh_Trigger__c</fullName>
    <label>QL Drawer Refresh Trigger</label>
    <length>50</length>
    <type>Text</type>
</CustomField>