FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Line_Group_Start_Date_Match__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Group_Start_Date_Match__c</fullName>
    <description>Created for ARR Price Rules to determine if Quote Start Date and Group Start Date are the same.</description>
    <formula>IF(SBQQ__Group__r.SBQQ__StartDate__c =  SBQQ__Quote__r.SBQQ__StartDate__c, true, false)</formula>
    <label>Quote Line Group Start Date Match</label>
    <type>Checkbox</type>
</CustomField>