FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Type__c</fullName>
    <description>Created from JIRA ticket: BOPI-103.</description>
    <formula>IF(NOT(ISBLANK(SBQQ__RenewedSubscription__c)) &amp;&amp; SBQQ__Quantity__c != 0,
    IF( Price_Change__c ,&quot;Price Change&quot;,&quot;Renewal&quot;),
    IF(ISBLANK(SBQQ__UpgradedSubscription__c) &amp;&amp; ISBLANK(SBQQ__RenewedSubscription__c),
        IF( Price_Change__c ,&quot;Price Change&quot;,&quot;New&quot;),
        IF(SBQQ__Quantity__c = 0,
            IF( Price_Change__c ,&quot;Cancellation Price Change&quot;,&quot;Cancellation&quot;),
            IF(SBQQ__Quantity__c &gt; SBQQ__UpgradedSubscription__r.SBQQ__Quantity__c,
                &quot;Quantity Increase&quot;,
                IF(SBQQ__Quantity__c &lt; SBQQ__UpgradedSubscription__r.SBQQ__Quantity__c,
                    &quot;Quantity Reduction&quot;,
                    &quot;Amendment&quot;
                )
            )
        )        
    )
)</formula>
    <label>Quote Line Type</label>
    <type>Text</type>
</CustomField>