FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Line_Type_background__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Type_background__c</fullName>
    <description>Created for BOPI-770. Used for a flow to take the value from the Quote Line Type formula field so that it can be used in a rollup summary field.</description>
    <label>Quote Line Type background</label>
    <length>255</length>
    <type>Text</type>
</CustomField>