FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Regional_Availability__c.field-meta.xml
<CustomField>
    <fullName>Quote_Regional_Availability__c</fullName>
    <description>Created from JIRA ticket: BOPI-300.</description>
    <label>Quote Regional Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regional_Availability</valueSetName>
    </valueSet>
</CustomField>