FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Quote_Vertical__c</fullName>
    <description>Used for Product Rules.</description>
    <formula>SBQQ__Quote__r.Vertical__c</formula>
    <label>Quote Vertical</label>
    <type>Text</type>
</CustomField>