FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Price__c</fullName>
    <description>Created for SALDEV-914.</description>
    <label>Quoted Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>