FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quoted_Usage_Amt__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Usage_Amt__c</fullName>
    <formula>IF(NOT(ISBLANK(Adjusted_Rate_Amount__c)), Adjusted_Rate_Amount__c , Usage_Rate_Amt__c )</formula>
    <label>Quoted Usage Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>