FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quoted_Usage_Percent__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Usage_Percent__c</fullName>
    <formula>IF(NOT(ISBLANK(Adjusted_Rate_Percent__c)), Adjusted_Rate_Percent__c , Usage_Rate__c )</formula>
    <label>Quoted Usage %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>