FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/QuoteLineLongID__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineLongID__c</fullName>
    <description>Quote Line Long ID</description>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteLineLongID</label>
    <type>Text</type>
</CustomField>