FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Rate_Details_Changed__c.field-meta.xml
<CustomField>
    <fullName>Rate_Details_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BOPI-1048--Refactored the flow.</description>
    <label>Rate Details Changed</label>
    <type>Checkbox</type>
</CustomField>