FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <description>JIRA ticket: BOPI-2</description>
    <inlineHelpText>Field is needed for NetSuite Integration</inlineHelpText>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rate_Type</valueSetName>
    </valueSet>
</CustomField>