FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Refer_Resell_Partner__c.field-meta.xml
<CustomField>
    <fullName>Refer_Resell_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner related to this product who is referring/reselling or providing the service. Use the Partner Type field to specify our relationship. BOPI-512</description>
    <inlineHelpText>Partner related to this product who is referring/reselling or providing the service. Use the Partner Type field to specify our relationship.</inlineHelpText>
    <label>Refer/Resell Partner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Make sure you are choosing a Strategic Partner.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Strategic Partner</value>
        </filterItems>
        <infoMessage>Search for the Strategic Partner.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Lines (Refer/Resell Partner)</relationshipLabel>
    <relationshipName>Partner_Product</relationshipName>
    <type>Lookup</type>
</CustomField>