FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Region_Match__c.field-meta.xml
<CustomField>
    <fullName>Region_Match__c</fullName>
    <description>Created for BOPI-336</description>
    <inlineHelpText>Used in a Price Rule to determine if a lines Regional Availability and Product Region match</inlineHelpText>
    <label>Region Match</label>
    <length>50</length>
    <type>Text</type>
</CustomField>