FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Region_Match_Update__c.field-meta.xml
<CustomField>
    <fullName>Region_Match_Update__c</fullName>
    <description>Created for BOPI-336</description>
    <formula>Region_Match__c</formula>
    <inlineHelpText>Used to check if the values match between original Price Region value and updated value</inlineHelpText>
    <label>Region Match Update</label>
    <type>Text</type>
</CustomField>