FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Regional_Availability__c.field-meta.xml
<CustomField>
    <fullName>Regional_Availability__c</fullName>
    <description>JIRA ticket: BOPI-2</description>
    <inlineHelpText>Field will be used in the criteria for pricing lookup</inlineHelpText>
    <label>Regional Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regional_Availability</valueSetName>
    </valueSet>
</CustomField>