FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Required_By_SKU__c.field-meta.xml
<CustomField>
    <fullName>Required_By_SKU__c</fullName>
    <description>Created for SALDEV-1076 to stamp PO SKU</description>
    <label>Required By SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>