FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Requires_ARR_Fields_Completion__c.field-meta.xml
<CustomField>
    <fullName>Requires_ARR_Fields_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BOPI-631 Created to verify if a XB/DOM Quote Line should trigger the ARR warning price rule. This field is filled by the QCP custom script</description>
    <label>Requires ARR Fields Completion</label>
    <type>Checkbox</type>
</CustomField>