FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Requires_Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Requires_Usage_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BOPI-445 This field is used for any combination of attributes that req the Usage Type in the usage rate lookup logic. Combination of attributes are in the price action formula of the price rule</description>
    <inlineHelpText>Used in price rules to look up usage rate</inlineHelpText>
    <label>Requires Usage Type</label>
    <type>Checkbox</type>
</CustomField>