FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Rev_Share__c.field-meta.xml
<CustomField>
    <fullName>Rev_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for BOPI-340</description>
    <inlineHelpText>Used to determine if a quote needs to be submitted to Revenue team for approval.</inlineHelpText>
    <label>Rev Share</label>
    <type>Checkbox</type>
</CustomField>