FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Separate_Entity__c.field-meta.xml
<CustomField>
    <fullName>Separate_Entity__c</fullName>
    <description>Created from JIRA ticket: BOPI-344.</description>
    <formula>IF(ISPICKVAL( Ship_To_Account__r.Separate_Legal_Entity_Tax_ID__c ,&apos;Yes&apos;), 0, 
IF(ISPICKVAL( Ship_To_Account__r.Separate_Legal_Entity_Tax_ID__c ,&apos;No&apos;),0,1))</formula>
    <label>Separate Entity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>