FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Ship_To_Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account_Region__c</fullName>
    <description>Set by price rule, stamps the Account Region value from the Ship To Account&apos;s Account Region field. Used as a condition for QCP logic for QLE drawer fields used in ARR calculations. BOPI-439</description>
    <inlineHelpText>The Ship To Account&apos;s Account Region value on the Account Record</inlineHelpText>
    <label>Ship To Account Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>