FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Ship_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Country__c</fullName>
    <formula>Ship_To_Account__r.ShippingCountry</formula>
    <label>Ship To Country</label>
    <type>Text</type>
</CustomField>