FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Ship_To_Pricing_Region__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Pricing_Region__c</fullName>
    <description>Can be deprecated eventually, but price rules and global picklists have to be updated first (MV 10/15)</description>
    <label>Ship To Pricing Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricing_Region</valueSetName>
    </valueSet>
</CustomField>