FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Stamped_Transaction_Currency__c.field-meta.xml
<CustomField>
    <fullName>Stamped_Transaction_Currency__c</fullName>
    <description>BOPI-894 Used in price rule for setting Non-Local Currency field</description>
    <label>Stamped Transaction Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transaction_Currencies</valueSetName>
    </valueSet>
</CustomField>