FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Existing Customers Only</fullName>
            </value>
            <value>
                <fullName>Beta</fullName>
                <isActive>false</isActive>
                <label>Beta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>