FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Surcharging__c.field-meta.xml
<CustomField>
    <fullName>Surcharging__c</fullName>
    <description>Updated by price rule when Surcharge amount is entered for DOM and XB, used in usage rate attributes lookup. Hidden from users</description>
    <label>Surcharging</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>