FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Tiered_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Tiered_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BOPI-701 Twinned from Product, indicates if it has tiered pricing; sent to NS and triggers creation of NS Pricebook when True. External Description will display the standard tiered pricing when this field = True.</description>
    <inlineHelpText>Product has tiered pricing that will display in External Description and triggers NS pricebook creation when True.</inlineHelpText>
    <label>Tiered Pricing</label>
    <type>Checkbox</type>
</CustomField>