FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Transaction_Currency__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Currency__c</fullName>
    <description>Created from JIRA ticket: BOPI-358. Updated label per BOPI-825</description>
    <label>Transaction (Portal) Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transaction_Currencies</valueSetName>
    </valueSet>
</CustomField>