FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Created for BOPI-188</description>
    <inlineHelpText>Used to hold an attribute value for usage based pricing</inlineHelpText>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transaction_Type</valueSetName>
    </valueSet>
</CustomField>