FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Usage_Key__c.field-meta.xml
<CustomField>
    <fullName>Usage_Key__c</fullName>
    <description>Populated by price rule, concatenates usage rate variables for lookup</description>
    <label>Usage Key Calc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>