FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Usage_Key_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Usage_Key_Lookup__c</fullName>
    <label>Usage Key Lookup</label>
    <length>100</length>
    <type>Text</type>
</CustomField>