FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Usage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Usage_Rate__c</fullName>
    <description>Created from JIRA ticket: BOPI-7.</description>
    <label>Usage Rate %</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>