FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Usage_Rate_Discount__c.field-meta.xml
<CustomField>
    <fullName>Usage_Rate_Discount__c</fullName>
    <description>Field used to calculate the Usage Discount Percentage, regardless of whether the usage is specified as an amount or a percentage. This is used on the approval email templates</description>
    <formula>IF(NOT(ISBLANK(Adjusted_Rate_Percent__c)), (1-(Adjusted_Rate_Percent__c / Usage_Rate__c)), (1-(Adjusted_Rate_Amount__c / Usage_Rate_Amt__c)))</formula>
    <inlineHelpText>Usage Discount Percentage, regardless of whether the usage is specified as an amount or a percentage.</inlineHelpText>
    <label>Usage Rate Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>