FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Utilization__c.field-meta.xml
<CustomField>
    <fullName>Utilization__c</fullName>
    <description>BOPI-30 Twins to existing Opp Product field, allows user input on Quote Line for B2B ARR calculation</description>
    <inlineHelpText>Select the % Expected for Year 1 Utilization for B2B ARR calculations</inlineHelpText>
    <label>% Utilization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>40%</fullName>
            </value>
            <value>
                <fullName>60%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>