FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Vertical2__c.field-meta.xml
<CustomField>
    <fullName>Vertical2__c</fullName>
    <description>MV testing for usage rate price rule</description>
    <label>Vertical2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vertical</valueSetName>
    </valueSet>
</CustomField>