FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <inlineHelpText>Used to set the Vertical for Products on the Quote Line.</inlineHelpText>
    <label>Vertical</label>
    <length>50</length>
    <type>Text</type>
</CustomField>