FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/View_Only__c.field-meta.xml
<CustomField>
    <fullName>View_Only__c</fullName>
    <description>Created for SALDEV-978</description>
    <formula>IF(
OR(
ISPICKVAL(SBQQ__Quote__r.SBQQ__Opportunity2__r.StageName, &quot;Closed Won&quot;),
ISPICKVAL(SBQQ__Quote__r.SBQQ__Opportunity2__r.StageName, &quot;Closed Lost&quot;)),
&quot;You cannot edit a Quote on a closed Opportunity&quot;,
&quot;If you need to edit this Quote, please recall approval in order to Edit Lines&quot;)</formula>
    <label>View Only</label>
    <type>Text</type>
</CustomField>