FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Yearly_Invoiced_Sent__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Invoiced_Sent__c</fullName>
    <description>BOPI-511: This field is utilized in the Opp_Product_SFS_ARR flow to calculate the ARR for the Third Party Invoicing (Usage) product (FWSI1200)</description>
    <label>Yearly Invoiced Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>